@@ -9,11 +9,7 @@ import org.openehr.rm.datatypes.text.CodePhrase;
 
 public class CDvOrdinalTest extends SerializerTestBase {
 
-	public CDvOrdinalTest(String test) {
-		super(test);
-	}
-
-	public void testPrintCDvOrdinal() throws Exception {
+	public void testPrintCDvOrdinalWithAssumedValue() throws Exception {
 		Set<Ordinal> list = new LinkedHashSet<Ordinal>();
 		for (int i = 1; i <= 4; i++) {
 			list.add(new Ordinal(i, new CodePhrase("local", "at200" + i)));
@@ -26,6 +22,19 @@ public class CDvOrdinalTest extends SerializerTestBase {
 		verifyByFile("c-dv-ordinal-test.adl");
 	}
 	
+	public void testPrintCDvOrdinal() throws Exception {
+		Set<Ordinal> list = new LinkedHashSet<Ordinal>();
+		for (int i = 1; i <= 4; i++) {
+			list.add(new Ordinal(i, new CodePhrase("local", "at200" + i)));
+		}
+		cordinal = new CDvOrdinal("/path", null, null, null, list, 
+				null, null);
+		clean();
+		outputter.printCDvOrdinal(cordinal, 0, out);
+		verifyByFile("c-dv-ordinal-test2.adl");
+	}
+	
 	private CDvOrdinal cordinal;
+	private Set<Ordinal> list;
 }
 
